# Defaults-instafader

./: CONTRIBUTING.md  README.md  main.py  main2.py  mainc.py  pyproject.toml  skin.ini
old_circles/: skin.ini
spares/: skin.ini
